@@ -1,6 +1,9 @@
 User johns
 Date:
 
+    Support VDR 1.7.36 new build system.
+    Improves VDPAU display preemption handling.
+    Add modifiers to X11 remote key names (from Sibbi).
     Add compatibility with >=ffmpeg 1.1.
     Adds PIP (Picture-in-Picture) support.
     Split mpeg packets in receiver thread.
